crates/ruff_linter/src/rules/flake8_quotes/snapshots/ruff_linter__rules__flake8_quotes__tests__require_docstring_singles_over_docstring_singles.py.snap
---
source: crates/ruff_linter/src/rules/flake8_quotes/mod.rs
---
Q001 [*] Single quote multiline found but double quotes preferred
 --> docstring_singles.py:5:1
  |
3 |   '''
4 |
5 | / '''
6 | | this is not a docstring
7 | | '''
  | |___^
8 |
9 |   l = []
help: Replace single multiline quotes with double quotes
  |
4 |
  - '''
5 + """
6 | this is not a docstring
  - '''
7 + """
8 |
  |

Q001 [*] Single quote multiline found but double quotes preferred
  --> docstring_singles.py:11:21
   |
 9 |   l = []
10 |
11 |   class Cls(MakeKlass('''
   |  _____________________^
12 | |     class params \t not a docstring
13 | | ''')):
   | |___^
14 |       '''
15 |       Single quotes multiline class docstring
help: Replace single multiline quotes with double quotes
   |
10 |
   - class Cls(MakeKlass('''
11 + class Cls(MakeKlass("""
12 |     class params \t not a docstring
   - ''')):
13 + """)):
14 |     '''
   |

Q001 [*] Single quote multiline found but double quotes preferred
  --> docstring_singles.py:18:5
   |
16 |       '''
17 |
18 | /     '''
19 | |     this is not a docstring
20 | |     '''
   | |_______^
21 |
22 |       # The colon in the list indexing below is an edge case for the docstring scanner
help: Replace single multiline quotes with double quotes
   |
17 |
   -     '''
18 +     """
19 |     this is not a docstring
   -     '''
20 +     """
21 |
   |

Q001 [*] Single quote multiline found but double quotes preferred
  --> docstring_singles.py:23:21
   |
22 |       # The colon in the list indexing below is an edge case for the docstring scanner
23 |       def f(self, bar='''
   |  _____________________^
24 | |         definitely not a docstring''',
   | |_____________________________________^
25 |           val=l[Cls():3]):
26 |           '''
help: Replace single multiline quotes with double quotes
   |
22 |     # The colon in the list indexing below is an edge case for the docstring scanner
   -     def f(self, bar='''
   -         definitely not a docstring''',
23 +     def f(self, bar="""
24 +         definitely not a docstring""",
25 |         val=l[Cls():3]):
   |

Q001 [*] Single quote multiline found but double quotes preferred
  --> docstring_singles.py:32:9
   |
30 |           some_expression = 'hello world'
31 |
32 | /         '''
33 | |         this is not a docstring
34 | |         '''
   | |___________^
35 |
36 |           if l:
help: Replace single multiline quotes with double quotes
   |
31 |
   -         '''
32 +         """
33 |         this is not a docstring
   -         '''
34 +         """
35 |
   |

Q001 [*] Single quote multiline found but double quotes preferred
  --> docstring_singles.py:37:13
   |
36 |           if l:
37 | /             '''
38 | |             Looks like a docstring, but in reality it isn't - only modules, classes and functions
39 | |             '''
   | |_______________^
40 |               pass
help: Replace single multiline quotes with double quotes
   |
36 |         if l:
   -             '''
37 +             """
38 |             Looks like a docstring, but in reality it isn't - only modules, classes and functions
   -             '''
39 +             """
40 |             pass
   |
