crates/ruff_linter/src/rules/flake8_quotes/snapshots/ruff_linter__rules__flake8_quotes__tests__require_doubles_over_singles.py.snap
---
source: crates/ruff_linter/src/rules/flake8_quotes/mod.rs
---
Q000 [*] Single quotes found but double quotes preferred
 --> singles.py:1:25
  |
1 | this_should_be_linted = 'single quote string'
  |                         ^^^^^^^^^^^^^^^^^^^^^
2 | this_should_be_linted = u'double quote string'
3 | this_should_be_linted = f'double quote string'
help: Replace single quotes with double quotes
  |
  - this_should_be_linted = 'single quote string'
1 + this_should_be_linted = "single quote string"
2 | this_should_be_linted = u'double quote string'
  |

Q000 [*] Single quotes found but double quotes preferred
 --> singles.py:2:25
  |
1 | this_should_be_linted = 'single quote string'
2 | this_should_be_linted = u'double quote string'
  |                         ^^^^^^^^^^^^^^^^^^^^^^
3 | this_should_be_linted = f'double quote string'
4 | this_should_be_linted = f'double {"quote"} string'
help: Replace single quotes with double quotes
  |
1 | this_should_be_linted = 'single quote string'
  - this_should_be_linted = u'double quote string'
2 + this_should_be_linted = u"double quote string"
3 | this_should_be_linted = f'double quote string'
  |

Q000 [*] Single quotes found but double quotes preferred
 --> singles.py:3:25
  |
1 | this_should_be_linted = 'single quote string'
2 | this_should_be_linted = u'double quote string'
3 | this_should_be_linted = f'double quote string'
  |                         ^^^^^^^^^^^^^^^^^^^^^^
4 | this_should_be_linted = f'double {"quote"} string'
help: Replace single quotes with double quotes
  |
2 | this_should_be_linted = u'double quote string'
  - this_should_be_linted = f'double quote string'
3 + this_should_be_linted = f"double quote string"
4 | this_should_be_linted = f'double {"quote"} string'
  |
